# FreeRTOS

./: .gitignore
FreeRTOS/Demo/XCOREAI_XCC/: freertos.cmake
FreeRTOS/Demo/XCOREAI_XCC/ed_simple/: CMakeLists.txt  Makefile
FreeRTOS/Demo/XCOREAI_XCC/ed_simple/src/: FreeRTOSConfig.h  main.xc  mic_array_conf.h  test.c  testing_main.h  voice_front_end_settings.h
